prod/apps/actions/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: actions
  labels:
    app.kubernetes.io/part-of: ci
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
  annotations:
    downscaler/uptime: "Mon-Sun 07:00-22:00 Europe/Berlin"
